--- a/week-1/index.html
+++ b/week-1/index.html
@@ -9,6 +9,7 @@
   <body>
     <header>
       <h2>Website Title/Logo</h2>
+      <!-- navigation -->
       <nav class="nav-icon"><img src="img/icon.png" alt="menu trigger icon"></nav>
       <nav class="nav-menu">
         <a href="#">Item 1</a>
@@ -18,12 +19,14 @@
       </nav>
     </header>
 
+    <!-- banner -->
     <div class="banner">
       <h1>Welcome Message</h1>
     </div>
 
     <main>
       <h2>Section Title</h2>
+      <!-- content-box -->
       <div class="container">
         <div class="content-box"><a>Content Box 1</a></div>
         <div class="content-box"><a>Content Box 2</a></div>
@@ -32,6 +35,7 @@
       </div>
     </main>
 
+    <!-- button -->
     <div class="button">
       <div>Call to Action</div>
     </div>
