--- a/week-1/index.html
+++ b/week-1/index.html
@@ -4,6 +4,7 @@
     <title>RWD Page Layout in pure HTML/CSS</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/flexbox.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
 
   <body>
