--- a/week-2/Assignment 4/index.html
+++ b/week-2/Assignment 4/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RWD Page Layout in pure HTML/CSS</title>
+    <title>HTML DOM and Event Handling/CSS</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/flexbox.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
