--- a/week-4/Assignment 2/index.html
+++ b/week-4/Assignment 2/index.html
@@ -3,10 +3,21 @@
 
   <head>
     <title>Callback Function and Advanced HTML DOM</title>
+    <link rel="stylesheet" href="css/layout.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <body>
-    <h2>Product Display:</h2>
+    <header>
+      <h1>Product Display</h1>
+    </header>
+    <div id="product-list">
+      <div class="product">
+        <div class="product_info">Name</div>
+        <div class="product_info">Description</div>
+        <div class="product_info">Price</div>
+      </div>
+    </div>
     <script src="./app.js"></script>
   </body>
 
